# services

./: .gitignore  README.md  pipeline.md  prometheus.md  refactor.md
api-gateway/: .env  Dockerfile  README.md  export_codebase.py  full_codebase.md  pyproject.toml
api-gateway/app/: main.py
api-gateway/app/auth/: auth_middleware.py  auth_service.py
api-gateway/app/core/: config.py  logging_config.py
api-gateway/app/db/: postgres_client.py
api-gateway/app/models/: admin_models.py  document_stats_models.py
api-gateway/app/routers/: admin_router.py  auth_router.py  gateway_router.py  user_router.py
docproc-service/: .env  Dockerfile  README.md  full_codebase.md  pyproject.toml  refactor.md
docproc-service/app/: dependencies.py  main.py
docproc-service/app/api/v1/: schemas.py
docproc-service/app/api/v1/endpoints/: process_endpoint.py
docproc-service/app/application/ports/: chunking_port.py  extraction_port.py
docproc-service/app/application/use_cases/: process_document_use_case.py
docproc-service/app/core/: config.py  logging_config.py  metrics.py
docproc-service/app/domain/: models.py
docproc-service/app/infrastructure/chunkers/: default_chunker_adapter.py
docproc-service/app/infrastructure/extractors/: __init__.py  base_extractor.py  composite_extractor_adapter.py  docx_adapter.py  excel_adapter.py  html_adapter.py  md_adapter.py  pdf_adapter.py  txt_adapter.py
docproc-service/app/services/: kafka_clients.py  s3_client.py
embedding-service/: .env  Dockerfile  README.md  export_codebase.py  full_codebase.md  pyproject.toml  refactor.md
embedding-service/app/: dependencies.py  gunicorn_conf.py  main.py
embedding-service/app/api/: __init__.py
embedding-service/app/api/v1/: __init__.py  schemas.py
embedding-service/app/api/v1/endpoints/: __init__.py  embedding_endpoint.py
embedding-service/app/application/ports/: __init__.py  embedding_model_port.py
embedding-service/app/application/use_cases/: embed_texts_use_case.py
embedding-service/app/core/: config.py  logging_config.py  metrics.py
embedding-service/app/domain/: __init__.py  models.py
embedding-service/app/infrastructure/: __init__.py
embedding-service/app/infrastructure/embedding_models/: __init__.py  fastembed_adapter.py  instructor_adapter.py  openai_adapter.py  sentence_transformer_adapter.py
embedding-service/app/services/: kafka_clients.py
embedding-service/app/utils/: __init__.py
frontend/uploader/: package-lock.json
frontend/uploader/src/: App.js
ingest-service/: .dockerignore  .env  .env.example  Dockerfile  README.md  full_codebase.md  pyproject.toml
ingest-service/app/: main.py
ingest-service/app/api/v1/: schemas.py
ingest-service/app/api/v1/endpoints/: ingest.py
ingest-service/app/core/: config.py  logging_config.py  metrics.py
ingest-service/app/db/: postgres_client.py
ingest-service/app/models/: domain.py
ingest-service/app/services/: base_client.py  gcs_client.py  ingest_pipeline.py  kafka_producer.py  s3_client.py
ingest-service/app/services/clients/: docproc_service_client.py  embedding_service_client.py
ingest-service/app/tasks/: celery_app.py  process_document.py
kafka/: diagrama_general.md  diagrama_hdfs.md  digrama_eks.md  registro.txt
scripts/: analytics.py  batch_daily.py  prometheus.yml
