# File: pyproject.toml
[tool.poetry]
name = "atenex-api-gateway"
version = "2.0.0-refactor"
description = "Atenex API Gateway (Simplified Proxy for Kafka/Flink Demo)"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Core FastAPI y servidor ASGI
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"

# Configuración y validación
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"

# Cliente HTTP asíncrono
httpx = {extras = ["http2"], version = "^0.27.0"}

# Logging estructurado
structlog = "^24.1.0"

# Dependencia necesaria para httpx[http2]
h2 = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"