[tool.poetry]
name = "docproc-service"
version = "1.1.0"
description = "Atenex Document Processing Service: Extracts text and chunks documents."
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
python-multipart = "^0.0.9" # For FastAPI File Uploads
httpx = "^0.27.0" # For potential internal calls or future use

# Extraction Libraries
pymupdf = "^1.25.0"
python-docx = ">=1.1.0,<2.0.0"
markdown = ">=3.5.1,<4.0.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
html2text = ">=2024.1.0,<2025.0.0"
pandas = "^2.2.0" # Para procesar Excel
openpyxl = "^3.1.0" # Requerido por pandas para .xlsx
tabulate = "^0.9.0" # FLAG: Dependencia añadida para el correcto funcionamiento de pandas.to_markdown con tablefmt="pipe"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"