# File: pyproject.toml
[tool.poetry]
name = "docproc-service"
version = "2.0.0"
description = "Atenex Document Processing Worker (Kafka Consumer/Producer)"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
httpx = "^0.27.0"

# --- AWS and Kafka Clients ---
boto3 = "^1.34.0"
confluent-kafka = "^2.4.0"

# --- Prometheus Metrics Client ---
prometheus-client = "^0.20.0"

# --- Extraction Libraries (se mantienen) ---
pymupdf = "^1.25.0"
python-docx = ">=1.1.0,<2.0.0"
markdown = ">=3.5.1,<4.0.0"
beautifulsoup4 = ">=4.12.3,<5.0.0"
html2text = ">=2024.1.0,<2025.0.0"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"