# File: embedding-service/pyproject.toml
[tool.poetry]
name = "embedding-service"
version = "2.1.0-final"
description = "Atenex Embedding Worker using OpenAI (Kafka Consumer/Producer)"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
tenacity = "^8.2.3"
numpy = "^1.26.0"

# --- Embedding Engine ---
openai = "^1.14.0"

# --- Kafka Client ---
confluent-kafka = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"