# File: ingest-service/pyproject.toml
[tool.poetry]
name = "ingest-service"
version = "2.1.0-final"
description = "Ingest service for Atenex - Kafka Producer (Refactored for AWS, DB-less)"
authors = ["Atenex Team <dev@atenex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
gunicorn = "^21.2.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
pydantic-settings = "^2.2.1"
tenacity = "^8.2.3"
python-multipart = "^0.0.9"
structlog = "^24.1.0"
httpx = {extras = ["http2"], version = "^0.27.0"}

# AWS S3 Client
boto3 = "^1.34.0"

# Kafka Producer Client
confluent-kafka = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"